Fixing select overflow in forms

--- a/src/coreUI/components/Inputs/SelectFields/styles.css
+++ b/src/coreUI/components/Inputs/SelectFields/styles.css
@@ -63,8 +63,6 @@ fieldset[id*="filter-"] .options {
   padding: 7.5px !important;
   z-index: 10;
   text-transform: capitalize;
-  height: 200px;
-  overflow-y: scroll;
 }
 
 fieldset[id*="filter-"] .options .option {
@@ -147,8 +145,8 @@ fieldset[id*="select"] .options {
   padding: 7.5px !important;
   z-index: 10;
   text-transform: capitalize;
-  height: 200px;
-  overflow-y: scroll;
+  max-height: 200px;
+  overflow-y: auto;
 }
 
 fieldset[id*="select"] .options .option {
@@ -171,3 +169,31 @@ fieldset[id*="select"] select datalist::after {
   display: initial;
   appearance: none !important;
 }
+
+/* Custom Scrollbar : This is for Options If they exceed a certain height */
+
+/* width */
+fieldset[id*="select-"] .options::-webkit-scrollbar {
+  display: block !important;
+  width: 3px;
+  border-radius: 10px;
+}
+
+/* Track */
+fieldset[id*="select-"] .options::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+fieldset[id*="select-"] .options::-webkit-scrollbar-thumb {
+  background: rgb(36, 32, 32);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+fieldset[id*="select-"] .options::-webkit-scrollbar-thumb:hover {
+  background: black;
+}
+
+/* ____________________________ */
